--- a/blog/templates/blog/hansua/effort.html
+++ b/blog/templates/blog/hansua/effort.html
@@ -12,10 +12,10 @@
         <p>
             <h3>SK Forest 서포터즈 2기</h3>
                 <a href="https://instagram.com/forest_._echo?igshid=YmMyMTA2M2Y="></a>
-                    <img src="image\KakaoTalk_20230113_023844761_09.jpg" width="45%">
+                    <img src="https://postfiles.pstatic.net/MjAyMzAxMTNfNzYg/MDAxNjczNTgxMzU1ODg1.AjGC3StjSW101mF2KnZ96NVijo8Sxlqq7awjBFTiKYQg.zjxImcOqwXl5nZeXr-B2prGtmaHT3WZF1UdMYeqVSqcg.JPEG.hsabest/KakaoTalk_20230113_023844761_09.jpg?type=w773" width="45%">
                 </a>
                 <a href="https://instagram.com/forest_._echo?igshid=YmMyMTA2M2Y=">
-                    <img src="image\KakaoTalk_20230113_023844761_08.jpg" width="25%">
+                    <img src="https://postfiles.pstatic.net/MjAyMzAxMTNfMjA5/MDAxNjczNTgxMzU1ODUz.V0sG8SzEwvv-ZRmv2SdqclN3F2fY2ELFNXFoxmmTvLwg.PKoiRgmPBAXaRFUHCHIwF3bwe_l2R8FimC0BkZEBvHgg.JPEG.hsabest/KakaoTalk_20230113_023844761_08.jpg?type=w773" width="25%">
                 </a>
             <h4>-우수 활동팀 선정</h4>
     </div>
@@ -23,7 +23,7 @@
         <hr>
         <div class="activity_2">
             <h3>대구 수목원 인턴 수료</h3>
-                <img src="image\KakaoTalk_20230113_023844761_14.jpg" width="45%">
+                <img src="https://postfiles.pstatic.net/MjAyMzAxMTNfMjg4/MDAxNjczNTgxMzU2MjU4.8oqJKm_xjuMf3U0wjLhkt7eYM6RmSoNLCLW505QVwIQg.i9z5sg1AmvW6v4DBjMhQdynpHRTGuLOYRJeRScJNicwg.JPEG.hsabest/KakaoTalk_20230113_023844761_14.jpg?type=w773" width="45%">
             </div>            
             <hr>
             <table border="1" width="80%">
