--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -10,8 +10,8 @@
                 style="width:30px; height:30px;">
             </h1>
             <hr>
-            <h2><a href="aa">김성훈</a></h2>
-            <h2><a href="bb">bb</a></h2>
+            <h2><a href="seonghun">김성훈</a></h2>
+            <h2><a href="about_rumi">이아름</a></h2>
             <h2><a href="hansua">한수아</a></h2>
             <h2><a href="jihyun">손지현</a></h2>
             <h2><a href="limdoyoung">임도영</a></h2>
