--- a/blog/templates/blog/hansua.html
+++ b/blog/templates/blog/hansua.html
@@ -7,14 +7,15 @@
     </head>
         <body>
             <div class="a">
-            <img class="b" src="blog\templates\blog\image\20211218_121223.jpg" width="45%" >
+            <img class="b" src="https://postfiles.pstatic.net/MjAyMzAxMTNfMjMg/MDAxNjczNTgxMzU2MzE1.K2j119kl-QS63lLRYXjWV0Gr69M04CfTYKnYrUoe4X4g.Euu8gopqQBC9kmgqSn3fnDMSRLAqCZllSWyriBZO1gEg.JPEG.hsabest/KakaoTalk_20230113_023844761_18.jpg?type=w773" width="45%" >
             </div>
             <h2 id="c">한수아</h2>
 
             <button type="button" class="mbti" onClick="window.open('./mbti')">MBTI</button>
-            <button type="button" class="hobby" onClick="window.open('hobby.html')">취미</button>
-            <button type="button" class="forest" onClick="window.open('forest.html')">빅데이터 관심 분야</button>
-            <button type="button" class="effort" onClick="window.open('effort.html')">노력</button>
+            <button type="button" class="hobby" onClick="window.open('./hobby')">취미</button>
+            <button type="button" class="forest" onClick="window.open('./forest')">빅데이터 관심 분야</button>
+            <button type="button" class="effort" onClick="window.open('./effort')">노력</button>
+            
             <!--window.open():새창에서 열기-->
 
         </body>
