--- a/blog/templates/blog/hansua/forest.html
+++ b/blog/templates/blog/hansua/forest.html
@@ -18,8 +18,8 @@
 <hr>
 <h2>관련 대회 및 공모전</h2>
 <p>
-<img src="image\2022_bigdata.jpg" width="45%">
-<img src="image\20221227_01110203000001_L00.jpg" width="45%">
+<img src="https://postfiles.pstatic.net/MjAyMzAxMTNfMjg3/MDAxNjczNTgxMzU1ODE1.K1aZECyi2jxOADfLn1sswmQzgX0_0UX8AoHgdH4YQJog.AwbuZadn-nGtqpkt8NUvCesnxkt5xaJjP756r7MpVfMg.JPEG.hsabest/2022_bigdata.jpg?type=w773" width="45%">
+<img src="https://postfiles.pstatic.net/MjAyMzAxMTNfMTIy/MDAxNjczNTgxMzU1MzE5.ie2N3KRZvyKgMMDuqoP8wmaY4rURtX7FzWrehIjOsWEg.W-nRitGnwpkymRSP3PkndmgUb1ybDQIPIGjsuT8EqdMg.JPEG.hsabest/20221227_01110203000001_L00.jpg?type=w773" width="45%">
 </p>
 <h4>산림공공.빅데이터 활용 창업경진대회 및 공모전 참가로 실전 경험을 쌓는 것이 목표</h4>
 </body>
