--- a/blog/templates/blog/seonghun.html
+++ b/blog/templates/blog/seonghun.html
@@ -4,6 +4,7 @@
         <title>Blog</title>
     </head>
     <body>
+        <nav><a href='http://127.0.0.1:8000/blog/'>Home</a></nav>
         <div style="background-color:rgb(111, 131, 212)">
             <h2>Team homepage</h2>
         </div>
