--- a/blog/templates/blog/about_rumi.html
+++ b/blog/templates/blog/about_rumi.html
@@ -13,23 +13,24 @@
         
     </head> 
     <body >
-        <div >
-            <img class="profile-user-img" src="image/profile.png" alt="profile-user-img" width="20%", height="20%" >
-        </div>
+            <img class="profile-user-img" src="https://blogfiles.pstatic.net/MjAyMzAxMTNfMzcg/MDAxNjczNTg4NDM0NDQ0.a5TN8ZwFfKPZ7XHKiK339Hf_8qlPtsZo0AKZiHKjRLAg.tiPfzUEfCABRmm1Mu25Qcp55uyJjU5Ky0SyscLl-fnAg.PNG.dldkfma1202/profile.png" alt="brunch" width="200px", height="200px" >
         
+<br>
         <a  href="https://brunch.co.kr/@dldkfma1202" >
-        <img class="brunch icon" src="image/R.png" alt="brunch" width="50px", height="50px" >
-    </a>
+            <img class="profile-user-img" src="https://blogfiles.pstatic.net/MjAyMzAxMTNfMjIy/MDAxNjczNTg4NDM0MTMy.J2DSrE_S7AcketOz3SnxOCuL2SSH3nv_dWsAAXa3Znwg.GaTxqu_zhRPz6-GfkMorIIe8xTTKgJpncz_JwSea7tQg.PNG.dldkfma1202/R.png" alt="brunch" width="50px", height="50px" >
+        </a>
+
+
 
 
             <p></p><i>"고객의 <b> Needs</b>를 캐치하는 <b>기획자</b>이아름입니다."</i></p> 
             
 <p>       
 <b>취  미</b>
-<div><img src="image/등산.PNG" alt="1" style="width:150px;"/>
-    <img src="image/자수.PNG" alt="2" style="width:160px;"/>
+<div><img src="https://blogfiles.pstatic.net/MjAyMzAxMTNfMjI5/MDAxNjczNTg4NDM0MzU4.io47_Z4oLsARNlEbPl6F5-VEhnRCk08Ij9x_kE0VKDwg.1EjiU3LJd9UGu_ODkAy3foLQJCiM_wxOv93R0-PJDEUg.PNG.dldkfma1202/%EB%93%B1%EC%82%B0.PNG" alt="1" style="width:150px;"/>
+    <img src="https://blogfiles.pstatic.net/MjAyMzAxMTNfMjE3/MDAxNjczNTg4NDM0NzYy.Zvu4xI1no1mVhDQ27VKKtXG-oVKi1ySSJEY49uKP6IIg.MD5Ma3MZ4-_iUq6LA1xyGDP_CApt7uN1_QBvSvtDQwIg.PNG.dldkfma1202/%EC%9E%90%EC%88%98.PNG" alt="2" style="width:160px;"/>
     <a  href="https://www.instagram.com/legerement__/" >
-    <img src="image/레제흐멍.PNG" alt="3" style="width:190px;" >
+    <img src="https://blogfiles.pstatic.net/MjAyMzAxMTNfNjIg/MDAxNjczNTg4NDM0NjE4.1elF0wiigWDUVhmtFbcAJBaacDLv87Tm2ShpnOC0hM0g.g04o7rWOO4IeQ9Ik-X64eLwfhGPbM5PV6RG7SyJVZcsg.PNG.dldkfma1202/%EB%A0%88%EC%A0%9C%ED%9D%90%EB%A9%8D.PNG" alt="3" style="width:190px;" >
 </a>
 
 
@@ -61,11 +62,12 @@
 
 
 
+
         <footer>
             <br>
             <br>
             <br>
-            <a href="./index.html"> Team Home</a> 
+            <nav><a href='http://127.0.0.1:8000/blog/'>Home</a></nav>
         </footer>
 
 
