--- a/blog/templates/blog/about_rumi/PORTPORIO.html
+++ b/blog/templates/blog/about_rumi/PORTPORIO.html
@@ -20,15 +20,15 @@
         <div style="text-align : center;">
 
                 <h3>포트폴리오</h3>
-        <div><img src="image/AB테스트.PNG" alt="1" style="width:50%;"/><br><br>유저 AB 테스트 진행
+        <div><img src="https://blogfiles.pstatic.net/MjAyMzAxMTNfMTIg/MDAxNjczNTg4NDM0MzEx.t1tdEPA1msv4T0_LCXH55XClTiACDjcdiXvRfD2IMjsg.892v0oJMxdk1JkOXKBOsf_PIL-f-2fIqOhHBRx1qEnQg.PNG.dldkfma1202/AB%ED%85%8C%EC%8A%A4%ED%8A%B8.PNG" alt="1" style="width:50%;"/><br><br>유저 AB 테스트 진행
             <br>
             <br>
             <br>
         
 
             
-            <img src="image/로그인 화면 개선.png" alt="2" style="width:50%;"/><br><br>
-            <b>구글애널리틱스 분석을 통한 로그인 화면 개선</b>
+            <img src="https://blogfiles.pstatic.net/MjAyMzAxMTNfNDMg/MDAxNjczNTg4NDM0Mzg3.FxodBLhbo1gLjq-MUxp_EN0pUXncxsPxjCBSwxwTyxQg.ZW7KcBxEAzz9wUBfDOlblJfCKI3qm8ANyVjEv2eUVisg.PNG.dldkfma1202/%EB%A1%9C%EA%B7%B8%EC%9D%B8_%ED%99%94%EB%A9%B4_%EA%B0%9C%EC%84%A0.png" alt="2" style="width:50%;"/><br><br>
+            구글애널리틱스 분석을 통한 로그인 화면 개선
 
 
 
