--- a/blog/templates/blog/hansua.html
+++ b/blog/templates/blog/hansua.html
@@ -6,6 +6,7 @@
         <link href="style.css" rel="stylesheet" type="text/css">
     </head>
         <body>
+            <nav><a href='http://127.0.0.1:8000/blog/'>Home</a></nav>
             <div class="a">
             <img class="b" src="https://postfiles.pstatic.net/MjAyMzAxMTNfMjMg/MDAxNjczNTgxMzU2MzE1.K2j119kl-QS63lLRYXjWV0Gr69M04CfTYKnYrUoe4X4g.Euu8gopqQBC9kmgqSn3fnDMSRLAqCZllSWyriBZO1gEg.JPEG.hsabest/KakaoTalk_20230113_023844761_18.jpg?type=w773" width="45%" >
             </div>
