--- a/blog/templates/blog/jihyun.html
+++ b/blog/templates/blog/jihyun.html
@@ -31,6 +31,7 @@
           </style>
     </head>
     <body>
+        <nav><a href='http://127.0.0.1:8000/blog/'>Home</a></nav>
         <div style="text-align : center;
         background-color : black;
         color : lightgrey;">
