--- a/blog/templates/blog/limdoyoung.html
+++ b/blog/templates/blog/limdoyoung.html
@@ -18,7 +18,7 @@
   </head>
 
   <body>
- 
+    <nav><a href='http://127.0.0.1:8000/blog/'>Home</a></nav>
 <br>
 <!--안쪽여백,외관여백-->
 <div style="padding: 0.2em ; margin: 0.2em 10px; font-weight: bold; color: #565656; background: #071910; box-shadow: 3px 3px 2px 6px #ffeaea; border: dashed 2px #FE2E2E; border-radius: 5px;">
